docker: enable memory limit with cgroups